--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=TODO
-sonar.organization=TODO
+sonar.projectKey=sopra-fs24-group-23_sopra24_client
+sonar.organization=sopra-fs24-group-23-key
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=client
-#sonar.projectVersion=1.0
+sonar.projectName=client
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src
