--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
-    "typescript": "^3.9.10"
+    "typescript": "^3.9.10",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "scripts": {
     "dev": "react-scripts start",
