--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
     "typescript": "^3.9.10",
-    "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3"
+    "@stomp/stompjs": "^7.0.0"
   },
   "scripts": {
     "dev": "react-scripts start",
