--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.7",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
-    "typescript": "^3.9.10",
-    "@stomp/stompjs": "^7.0.0"
+    "typescript": "^3.9.10"
   },
   "scripts": {
     "dev": "react-scripts start",
