--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.24.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.8.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
@@ -11,12 +10,15 @@
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.7",
     "eslint-config-react-app": "^7.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "typescript": "^3.9.10"
   },
   "scripts": {
@@ -46,6 +48,7 @@
   ],
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/stompjs": "^2.3.9",
     "sass": "^1.70.0"
   }
 }
